smoother video recording; gaps are included

--- a/templates/videos.html
+++ b/templates/videos.html
@@ -3,14 +3,19 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>KittyCam Activities</title>
+    <title>Kitty Visits</title>
+<style>
+ul {
+  list-style-type: none;
+}
+</style>
 </head>
 <body>
     <h1>Videos</h1>
     <ul>
         {% for video in video_files %}
             <li>
-                <video width="320" height="240" controls onloadstart="this.playbackRate=0.25">
+                <video width="320" height="240" controls onloadstart="this.playbackRate=0.75">
                     <source src="{{ url_for('serve_video', filename=video) }}" type="video/mp4">
                     Your browser does not support the video tag.
                 </video>
