--- a/templates/index.html
+++ b/templates/index.html
@@ -4,10 +4,37 @@
    <meta charset='UTF-8'>
    <meta name='viewport' content='width=device-width, initial-scale=1.0'>
    <title>xiao mao cam</title>
-</head>
-<body>
-   <h1> xiao mao?</h1>
-   <img src="{{ url_for('video_feed') }}" width="100%">
+<style>
+#livevideo {
+  max-width: 500px;
+  padding: 5px;
+}
 
+.center {
+  display: block;
+  margin-left:auto;
+  margin-right:auto;
+  text-align: center;
+}
+
+a:link, a:visited {
+  background-color: #cacaca;
+  color: #0b0b0b;
+  padding: 14px 25px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+}
+
+a:hover, a:active {
+  background-color: #ffb9b9;
+}
+
+</style>
+</head>
+<body class="center">
+   <h1> xiao mao?</h1>
+   <img id='livevideo' src="{{ url_for('video_feed') }}" width="100%" class="center">
+   <a href='/activities'>View History</a>
 </body>
 </html>
