--- a/templates/videos.html
+++ b/templates/videos.html
@@ -43,7 +43,7 @@
 			</div>
 
 		</div>
-		<video width="320" height="240" controls onloadstart="this.playbackRate=0.75">
+		<video preload="metadata" width="320" height="240" controls onloadstart="this.playbackRate=0.75">
                     <source src="{{ url_for('serve_video', filename=videoid+'.mp4') }}" type="video/mp4">
                     Your browser does not support the video tag.
                 </video>
