--- a/templates/admin.html
+++ b/templates/admin.html
@@ -41,6 +41,10 @@
   color: white;
   border-radius: 4px;
 }
+#controls {
+ display: flex;
+ justify-content: center;
+}
 </style>
 </head>
 <body>
@@ -61,13 +65,17 @@
             <div class="video-container">
 		<div class="video-header">
 			<div> {{ t }} </div>
-			<div> 
+			<div>
+				{% if videoid in video_labels %}
+					{{ video_labels[videoid] }}
+				{% else %}
 				<select form="label-form" name="label_{{videoid}}" id="{{videoid}}-label">
 					<option disabled selected value> </option>
-					<option value="xiaomao">Xiaomao</option>
-					<option value="siama">Siama</option>
-					<option value="possum">Possum</option>
+					{% for (v, label) in label_codes.items() %}
+					<option value="{{v}}">{{label}}</option>
+					{% endfor %}
 				</select>
+				{% endif %}
 				<input type="checkbox" name="checked_video_ids" value="{{videoid}}" id="{{videoid}}-checkbox" form="delete-form" /> 
 			</div>
 
