add /logs; fixed latest detection time

--- a/templates/index.html
+++ b/templates/index.html
@@ -35,7 +35,7 @@ a:hover, a:active {
 <body class="center">
    <h1> xiao mao?</h1>
    <img id='livevideo' src="{{ url_for('video_feed') }}" width="100%" class="center">
-   <p>Last active at {{ last_activity_time }} </p>
+   <p>Latest detection at {{ latest_detection_time }} </p>
    <a href='/activities'>View History</a>
 </body>
 </html>
